# FileBatcher

./: LICENSE  README.md
FileBatcher/: .clang-format  .clangd  CMakeLists.txt  app.rc  main.cpp  version.h.in  version.rc
FileBatcher/controls/: CMakeLists.txt
FileBatcher/controls/buttons/: danger_button.h  default_button.cpp  default_button.h  info_button.h  primary_button.h  success_button.h  warning_button.h
FileBatcher/core/: Cargo.toml
FileBatcher/core/src/: lib.rs
FileBatcher/core/src/logger/: api.rs  config.rs  logger.rs  mod.rs
FileBatcher/helper/: CMakeLists.txt  theme_helper.h
FileBatcher/logger/: CMakeLists.txt  logger.cpp  logger.h
FileBatcher/resources/: resource.qrc
FileBatcher/resources/styles/: button.qss  progressbar.qss
FileBatcher/ui/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  mainwindow.cpp
